Changes for category API
